# autoforward-autoconvert

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  autoconvert.py  autoforward.py  docker-compose.yml  helpers.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
btc-electrum/: Dockerfile  docker-entrypoint.sh
docker/btc-electrum/: Dockerfile  docker-entrypoint.sh
docker/ltc-electrum/: Dockerfile  docker-entrypoint.sh
docker/monero-wallet-rpc/: Dockerfile  docker-entrypoint.sh
electrum-client/: Dockerfile  docker-entrypoint.sh
ltc-electrum/: Dockerfile  docker-entrypoint.sh
src/: autoconvert.py  autoforward.py  constants.py  env.py  seed-importer.py  util.py
